--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generate-js",
   "version": "1.1.1",
-  "description": "A easy to use prototypal inheritance modal and generator.",
+  "description": "An easy to use prototypal inheritance model and generator.",
   "main": "generate.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
