--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-js",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "An easy to use prototypal inheritance model and generator.",
   "main": "generate.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "prototype"
   ],
   "author": "Michaelangelo Jong",
-  "license": "TIM",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Mike96Angelo/Generate-JS/issues"
   },
